--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -301,6 +301,17 @@ body {
   .more p {
     font-weight: 900; }
 
+th .fa-times {
+  position: absolute;
+  right: 3px;
+  top: 8px;
+  font-size: 16px;
+  width: 20px;
+  height: 20px;
+  background: white;
+  color: black;
+  cursor: pointer; }
+
 .desc {
   border: 1px black solid; }
 
