--- a/src/assets/scss/components/_calendar.scss
+++ b/src/assets/scss/components/_calendar.scss
@@ -298,6 +298,18 @@
   }
 }
 
+th .fa-times {
+  position: absolute;
+  right: 3px;
+  top: 8px;
+  font-size: 16px;
+  width: 20px;
+  height: 20px;
+  background: white;
+  color: black;
+  cursor: pointer;
+}
+
 .desc {
   border: 1px black solid;
 }
